[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "APiLos"
requires-python = "3.10.8"
dynamic = ["dependencies", "optional-dependencies"]
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["dev-requirements.in"] }

[tool.pip-tools]
generate-hashes = true
resolver = "backtracking"

[tool.darker]
src = [
    "core",
    "bailleurs",
    "conventions",
    "instructeurs",
    "programmes",
    "stats",
    "users",
]
diff = true
check = false
isort = false
lint = [
    "pylint",
]
log_level = "INFO"

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/migrations/*",
    "ecoloweb/*",
    "programmes/management/commands/import_galion.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"

